baml_language/crates/baml_tests/snapshots/generator/baml_tests__generator__02_parser__valid_generator.snap
---
source: target/debug/build/baml_tests-176fd1045f27e6d5/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  GENERATOR_DEF
    KW_GENERATOR "generator"
    WORD "lang_python"
    CONFIG_BLOCK
      L_BRACE "{"
      CONFIG_ITEM
        WORD "output_type"
        CONFIG_VALUE "python/pydantic"
          WORD "python"
          SLASH "/"
          WORD "pydantic"
      CONFIG_ITEM
        WORD "output_dir"
        CONFIG_VALUE
          STRING_LITERAL "../python"
            QUOTE """
            DOT "."
            DOT "."
            SLASH "/"
            WORD "python"
            QUOTE """
      CONFIG_ITEM
        WORD "version"
        CONFIG_VALUE
          STRING_LITERAL "0.68.0"
            QUOTE """
            FLOAT_LITERAL "0.68"
            DOT "."
            INTEGER_LITERAL "0"
            QUOTE """
      R_BRACE "}"
  GENERATOR_DEF
    KW_GENERATOR "generator"
    WORD "lang_typescript"
    CONFIG_BLOCK
      L_BRACE "{"
      CONFIG_ITEM
        WORD "output_type"
        CONFIG_VALUE "typescript"
          WORD "typescript"
      CONFIG_ITEM
        WORD "output_dir"
        CONFIG_VALUE
          STRING_LITERAL "../typescript"
            QUOTE """
            DOT "."
            DOT "."
            SLASH "/"
            WORD "typescript"
            QUOTE """
      CONFIG_ITEM
        WORD "default_client_mode"
        CONFIG_VALUE
          STRING_LITERAL "async"
            QUOTE """
            WORD "async"
            QUOTE """
      R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "MyClass"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "age"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "GetUser"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "MyClass"
      WORD "MyClass"
    LLM_FUNCTION_BODY
      L_BRACE "{"
      CLIENT_FIELD "client"
        KW_CLIENT "client"
      LESS "<"
      WORD "llm"
      GREATER ">"
      WORD "MyClient"
      PROMPT_FIELD
        WORD "prompt"
        RAW_STRING_LITERAL #"Hello"#
          HASH "#"
          QUOTE """
          WORD "Hello"
          QUOTE """
          HASH "#"
      R_BRACE "}"

=== ERRORS ===
Error: Expected client name, found '<'
    ╭─[ valid_generator.baml:21:11 ]
    │
 21 │     client<llm> MyClient
    │           ┬  
    │           ╰── Expected client name, found '<'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected Only 'client' and 'prompt' allowed in LLM function, found '<', found '<'
    ╭─[ valid_generator.baml:21:11 ]
    │
 21 │     client<llm> MyClient
    │           ┬  
    │           ╰── Expected Only 'client' and 'prompt' allowed in LLM function, found '<', found '<'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected Only 'client' and 'prompt' allowed in LLM function, found 'llm', found identifier
    ╭─[ valid_generator.baml:21:12 ]
    │
 21 │     client<llm> MyClient
    │            ─┬─  
    │             ╰─── Expected Only 'client' and 'prompt' allowed in LLM function, found 'llm', found identifier
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected Only 'client' and 'prompt' allowed in LLM function, found '>', found '>'
    ╭─[ valid_generator.baml:21:15 ]
    │
 21 │     client<llm> MyClient
    │               ┬  
    │               ╰── Expected Only 'client' and 'prompt' allowed in LLM function, found '>', found '>'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected Only 'client' and 'prompt' allowed in LLM function, found 'MyClient', found identifier
    ╭─[ valid_generator.baml:21:17 ]
    │
 21 │     client<llm> MyClient
    │                 ────┬───  
    │                     ╰───── Expected Only 'client' and 'prompt' allowed in LLM function, found 'MyClient', found identifier
    │ 
    │ Note: Error code: E0010
────╯
